cretaed buttons and stored the outputs of code in database

--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -5,20 +5,21 @@
     "lib": [ "ESNext", "DOM" ],
     "module": "ESNext",
     "moduleResolution": "Node",
-    "noEmit": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
+    "strictNullChecks": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "noFallthroughCasesInSwitch": true,
+    "sourceMap": true,
+    "outDir": "./dist",
     "types": [ "codemirror" ]
   },
   "include": [
