--- a/appsettings.json
+++ b/appsettings.json
@@ -9,12 +9,17 @@
     "DatabaseName": "Contest",
     "UserCollectionName": "Participant"
   },
+  "User3Database": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "Contest",
+    "UserCollectionName": "Result"
+  },
 
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
