Changes done for updating the test case inputs and showing only the user defined function in the editor

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,9 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+/CodeFiles/Main.java
+/CodeFiles/Main.class
+/CodeFiles/eba653925a4e403b9c955e24d1e76272.py
+/CodeFiles/ea5eaa3d4b10455cbfcd36af534cebd3.exe
+/CodeFiles/ea5eaa3d4b10455cbfcd36af534cebd3.cpp
+/CodeEditor.sln
